# lab5

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  blur.cpp  blur.hpp  main.cpp
